Working on the Computer page

--- a/Designs/computer.html
+++ b/Designs/computer.html
@@ -62,39 +62,35 @@
 		<div class="container-fluid ">
 			<div class="row-fluid">
 		    	<div class="span3">
-			      	<div >
-						<img src="http://placehold.it/354x225" style="width:100%" class="img-rounded">
-					</div>
-					<div class="well well-large pull-down description">
+		    		
+						<ul class="thumbnails">
+				            <li class="span12">
+				              <a href="#" class="thumbnail">
+				                <div class="img-outer"><img src="http://computershopper.com/shoptalk/bn_6930p_frontleft.jpg" class="img-rounded model-image"></div>
+				              </a>
+				            </li>
+				        </ul>
+			    	
+
+					<div class="well well-large description">
 						<strong class="center title"><h3>BUF1234</h3></strong>
 						<strong class="space-right">Serial:</strong>AKF1298<br>
 						<strong class="space-right">Power usage:</strong>19W<br>
 						<strong class="space-right">Date of purchase:</strong>21/12-2012<br>
 						<strong class="space-right">Screen size:</strong>1920x1080<br>
 						<strong class="space-right">Location:</strong>The Library<br>
+						<strong class="space-right">Total memory:</strong>6 GB<br>
+						<strong class="space-right">Operating system:</strong>Windows 7, Service Pack 1<br>
 					</div>
-					<div class="well well-large pull-down description">
+					<div class="well well-large description">
 						<strong class="center title"><h3>HP EliteBook 6930P</h3></strong>
-						<strong class="space-right">Manufacturer:</strong><a href="www.hp.com">Hewlett Packard</a><br>
+						<strong class="space-right">Manufacturer:</strong><a href="http://www.hp.com">Hewlett Packard</a><br>
 						<strong class="space-right">Type:</strong>Laptop<br>
 						<strong class="space-right">Series:</strong>HP EliteBook<br>
 					</div>
 		    	</div>
 
-		    	<div class="span3">
-		    		<div class="well well-large description">
-						<strong class="center title"><h3>Windows 7</h3></strong>
-						<strong class="space-right">Manufacturer:</strong><a href="www.microsoft.com">Microsoft</a><br>
-						<strong class="space-right">Service Pack:</strong>1<br>
-					</div>
-
-					<div class="well well-large description">
-						<strong class="center title"><h3>Memory</h3></strong>
-						<strong class="space-right">Total memory:</strong>6 Gb<br>
-					</div>
-		    	</div>
-
-		    	<div class="span6">
+		    	<div class="span9">
 		      		<div class="accordion">
 					  <div class="accordion-group">
 					    <div class="accordion-heading">
