--- a/Designs/computer.html
+++ b/Designs/computer.html
@@ -65,7 +65,7 @@
 		    		
 						<ul class="thumbnails">
 				            <li class="span12">
-				              <a href="#" class="thumbnail">
+				              <a href="http://h10010.www1.hp.com/wwpc/ca/en/sm/WF05a/321957-321957-64295-89315-89315-3688868.html?dnr=1" class="thumbnail">
 				                <div class="img-outer"><img src="http://computershopper.com/shoptalk/bn_6930p_frontleft.jpg" class="img-rounded model-image"></div>
 				              </a>
 				            </li>
@@ -75,7 +75,6 @@
 					<div class="well well-large description">
 						<strong class="center title"><h3>BUF1234</h3></strong>
 						<strong class="space-right">Serial:</strong>AKF1298<br>
-						<strong class="space-right">Power usage:</strong>19W<br>
 						<strong class="space-right">Date of purchase:</strong>21/12-2012<br>
 						<strong class="space-right">Screen size:</strong>1920x1080<br>
 						<strong class="space-right">Location:</strong>The Library<br>
@@ -100,7 +99,23 @@
 					    </div>
 					    <div id="processors" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					      	<div class="object">
+						        <strong class="space-right">Model:</strong><a href="http://ark.intel.com/products/65523">i7 3770k</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.intel.com">Intel</a><br>
+						        <strong class="space-right">Architecture:</strong>x64<br>
+						        <strong class="space-right">Instruction set:</strong>64-bit<br>
+						        <strong class="space-right">Cores:</strong>4<br>
+						        <strong class="space-right">Threads:</strong>8<br>
+					   		</div>
+					   		<hr>
+					   		<div class="object">
+						        <strong class="space-right">Model:</strong><a href="http://ark.intel.com/products/65520">i5 3570k</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.intel.com">Intel</a><br>
+						        <strong class="space-right">Architecture:</strong>x64<br>
+						        <strong class="space-right">Instruction set:</strong>64-bit<br>
+						        <strong class="space-right">Cores:</strong>4<br>
+						        <strong class="space-right">Threads:</strong>4<br>
+					   		</div>
 					      </div>
 					    </div>
 					</div>
@@ -113,7 +128,21 @@
 					    </div>
 					    <div id="graphics-cards" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					        <div class="object">
+						        <strong class="space-right">Model:</strong><a href="http://www.geforce.com/hardware/desktop-gpus/geforce-gtx-680">GTX 680</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.nvidia.com">NVIDIA</a><br>
+						        <strong class="space-right">Memory size:</strong>2 GB<br>
+						        <strong class="space-right">Driver version:</strong>264.14<br>
+					   		</div>
+
+					   		<hr>
+
+					   		<div class="object">
+						        <strong class="space-right">Model:</strong><a href="http://www.geforce.com/hardware/desktop-gpus/geforce-gtx-680">GTX 680</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.nvidia.com">NVIDIA</a><br>
+						        <strong class="space-right">Memory size:</strong>2 GB<br>
+						        <strong class="space-right">Driver version:</strong>264.14<br>
+					   		</div>
 					      </div>
 					    </div>
 					</div>
@@ -126,7 +155,15 @@
 					    </div>
 					    <div id="network-cards" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					        <div class="object">
+						        <strong class="space-right">Model:</strong><a href="http://www.broadcom.com/products/Wireless-LAN/802.11-Wireless-LAN-Solutions/BCM4330">BCM4330</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.broadcom.com">Broadcom</a><br>
+						        <strong class="space-right">MAC address:</strong>AC:AB:D2:F3:F4<br>
+						        <strong class="space-right">Ip addresses</strong><br>
+						        <div class="pull-in-left well well-small">
+						       		10.10.10.90
+						       </div>
+					   		</div>
 					      </div>
 					    </div>
 					</div>
@@ -139,7 +176,23 @@
 					    </div>
 					    <div id="logical-drives" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					        <div class="object">
+						        <strong class="space-right">Space:</strong>286/462 GB<br>
+						        <strong class="space-right">Name:</strong>Operating System<br>
+						        <strong class="space-right">Drive letter:</strong>C:<br>
+						        <strong class="space-right">File system:</strong>NTFS<br>
+						        <strong class="space-right">Drive type:</strong>Local Disk<br>
+					   		</div>
+
+					   		<hr>
+
+					   		<div class="object">
+						        <strong class="space-right">Space:</strong>200/462 GB<br>
+						        <strong class="space-right">Name:</strong>Games<br>
+						        <strong class="space-right">Drive letter:</strong>D:<br>
+						        <strong class="space-right">File system:</strong>NTFS<br>
+						        <strong class="space-right">Drive type:</strong>Local Disk<br>
+					   		</div>
 					      </div>
 					    </div>
 					</div>
@@ -152,7 +205,19 @@
 					    </div>
 					    <div id="physical-drives" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					        <div class="object">
+					        	<strong class="space-right">Manufacturer:</strong><a href="http://wdc.com">Western Digital</a><br>
+						        <strong class="space-right">Model:</strong><a href="http://wdc.com/en/products/products.aspx?id=20">VelociRaptor</a><br>
+						        <strong class="space-right">Size:</strong>1 TB<br>
+					   		</div>
+
+					   		<hr>
+
+					   		 <div class="object">
+					        	<strong class="space-right">Manufacturer:</strong><a href="http://wdc.com">Western Digital</a><br>
+						        <strong class="space-right">Model:</strong><a href="http://wdc.com/en/products/products.aspx?id=20">VelociRaptor</a><br>
+						        <strong class="space-right">Size:</strong>1 TB<br>
+					   		</div>
 					      </div>
 					    </div>
 					 </div>
@@ -165,7 +230,27 @@
 					    </div>
 					    <div id="printers" class="accordion-body collapse">
 					      <div class="accordion-inner">
-					        Anim pariatur cliche...
+					        <div class="object" href="printer/1">
+						    	 <strong class="space-right">Model:</strong><a href="http://h20000.www2.hp.com/bizsupport/TechSupport/DriverDownload.jsp?pnameOID=84052&locale=en_US&taskId=135&prodSeriesId=84041&prodTypeId=18972">LaserJet 4300</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.hp.com">HP</a><br>
+						        <strong class="space-right">Name:</strong>Library Printer<br>
+						        <strong class="space-right">Identifier:</strong>BUF1414<br>
+						        <strong class="space-right">Color:</strong>True<br>
+						        <strong class="space-right">Ip:</strong>10.10.98.16<br>
+						        <strong class="space-right">Location:</strong>The Library<br>
+					   		</div>
+
+					   		<hr>
+
+					   		<div class="object" href="printer/2">
+						    	 <strong class="space-right">Model:</strong><a href="http://h20000.www2.hp.com/bizsupport/TechSupport/DriverDownload.jsp?pnameOID=84052&locale=en_US&taskId=135&prodSeriesId=84041&prodTypeId=18972">LaserJet 4300</a><br>
+						        <strong class="space-right">Manufacturer:</strong><a href="http://www.hp.com">HP</a><br>
+						        <strong class="space-right">Name:</strong>Library Printer<br>
+						        <strong class="space-right">Identifier:</strong>BUF1414<br>
+						        <strong class="space-right">Color:</strong>True<br>
+						        <strong class="space-right">Ip:</strong>10.10.98.16<br>
+						        <strong class="space-right">Location:</strong>The Library<br>
+					   		</div>
 					      </div>
 					    </div>
 					</div>
@@ -177,3 +262,8 @@
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ci.illution.dk/assets/bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript">
+		$('.object[href]').click(function(){
+			window.location = $(this).attr("href");
+		});
+	</script>
