--- a/tests/dataSync.html
+++ b/tests/dataSync.html
@@ -5,7 +5,7 @@
 
 var localStorageClientArray = localStorage.getItem('computers');
 var clientArray;
-var token = 'lbtumoyFCT6Az3k7cOBR81ldvLIHVQ7xArZofqzaroTSkvhmDeco8NzGULclHPlz';
+var token = 'ikgv6cpoamRoXgR16hFSDLU4AFgfdJDEqz0IenjH5NebeVWCapFl0af0gBeALiE2';
 var baseUrl = 'https://ci.illution.dk'
 
 if (localStorageClientArray != null) {
@@ -15,12 +15,94 @@ if (localStorageClientArray != null) {
 	localStorage.setItem('computers', JSON.stringify(dummyClientArray));
 }
 
+var dataSync = {
+	progress: 0,
+	actionCount: 0,
+	callback: null,
+	working: 0,
+	clientArray: null,
 
-$.get(baseUrl + '/computers/timestamps/2?token=' + token + '&dev=true&format=json', function(data) {
-	var serverArray = data.Computers;
-	console.log(dataCompare.check(clientArray, serverArray, {log: 0}));
+	add: function (id) {
+		$.get(baseUrl + '/computer/' + id + '?token=' + token + '&dev=true&format=json', function(data) {
+			dataSync.clientArray.push(data.Computer);
+			console.log("Added: ", data.Computer);
+			dataSync.updateProgress();
+		});
+	},
+	remove: function (id) {
+		var clientArrayCount = dataSync.clientArray.length;
+
+		for (var j = 0; j <= clientArrayCount - 1; j++) {
+			if (id == dataSync.clientArray[j].id) {
+				console.log("Removed: ", dataSync.clientArray.splice(j,1));
+				break;
+			}
+		};
+	},
+	update: function (id) {
+		dataSync.remove(id);
+		dataSync.add(id);
+	},
+	updateProgress: function () {
+		dataSync.progress++;
+		if (dataSync.progress >= dataSync.actionCount) {
+			console.log("Finished: ", dataSync.clientArray);
+			dataSync.working = false;
+			if (dataSync.callback != null && typeof(dataSync.callback) == "function") {
+				dataSync.callback(dataSync.clientArray);
+			}
+		}
+	},
+	execute: function (clientArray, callback) {
+		if (dataSync.working) {
+			return false;
+		} else {
+			dataSync.working = true;
+		}
+		$.get(baseUrl + '/computers/timestamps/2?token=' + token + '&dev=true&format=json', function(data) {
+			var serverArray = data.Computers;
+			var actions = dataCompare.check(clientArray, serverArray, {log: 0});
+
+			var addCount = actions.add.length;
+			var removeCount = actions.remove.length;
+			var updateCount = actions.update.length;
+
+			dataSync.actionCount = addCount + updateCount;
+			dataSync.progress = 0;
+			dataSync.callback = callback;
+			dataSync.clientArray = clientArray;
+			console.log("Actions: ", actions);
+
+			if (dataSync.actionCount == 0) {
+				dataSync.updateProgress();
+				return true;
+			}
+
+			// Adds
+			var addCount = actions.add.length;
+			for (var i = 0; i <= addCount - 1; i++) {
+				dataSync.add(actions.add[i]);
+			}
+
+			// Removes
+			for (var i = 0; i <= removeCount - 1; i++) {
+				dataSync.remove(actions.remove[i]);
+			};
+
+			// Updates
+			for (var i = 0; i <= updateCount - 1; i++) {
+				dataSync.update(actions.update[i]);
+			};
+		});
+		return true;
+	}
+}
+
+dataSync.execute(clientArray, function (data) {
+	clientArray = data;
+	console.log("Received callback!");
+	dataSync.execute(clientArray, function (data) {
+		console.log("Received second callback!");
+	});
 });
-
-
-
 </script>
